// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> by default matches with snapshot 1`] = `
<p
  className="sc-bdVaJa hbOtfO k-Paragraph--noMargin"
>
  Lorem ipsum dolor sit amet…
</p>
`;

exports[`<Paragraph /> with modifier matches with snapshot 1`] = `
<p
  className="sc-bdVaJa hbOtfO k-Paragraph--noMargin"
/>
`;

exports[`<Paragraph /> with no margin matches with snapshot 1`] = `
<p
  className="sc-bdVaJa hbOtfO k-Paragraph--noMargin"
/>
`;

exports[`<Paragraph /> without italic matches with snapshot 1`] = `
<p
  className="sc-bdVaJa hbOtfO k-Paragraph--noMargin"
/>
`;

exports[`<Paragraph /> without normal line height matches with snapshot 1`] = `
<p
  className="sc-bdVaJa hbOtfO k-Paragraph--noMargin"
/>
`;
